# kc_aircraftOptimize

./: .gitignore  .travis.yml  CMakeLists.txt  C_DAT.txt  LICENSE.txt  P_DAT.txt  README.md  aircraftCal.cbp  aircraftCal.cbp.mak  aircraftCal.cscope_file_list  aircraftCal.depend  aircraftCal.layout  def.h  main.cpp  query.txt
aircraftCal/: C_DAT.txt  Carrier.cpp  Carrier.h  P_DAT.txt  Plane.cpp  Plane.h  aircraftCal.layout  aircraftcal.depend  calculator.cpp  calculator.h  core.cpp  core.h  global.cpp  io.cpp  io.h  main.cpp  query.txt
aircraftCal/core/: Plane.cpp  Plane.h  calculator.cpp
asset/: carrier_ascii.csv  carrier_data.csv  carrier_data_list.csv  plane_ascii.csv  plane_data.csv  plane_data_list.csv
asset/data_tools/: ASCII_generate.js
core/: Carrier.cpp  atkdp.cpp  calculator.cpp  calculator.h  formular_inline.h  global.cpp  grid.h  io.cpp  io.h  predef.h
info/: api.json
src/: ACC.cpp  CV.cpp  Carrier.cpp  Enumer.cpp  Plane.cpp  calculator.cpp  formular.cpp  io.cpp
src/enum_defs/: Plane_type.def  enumer.cpp  enumer.h
src/header/: ACC.h  CV.h  Carrier.h  CustomDelimiter.h  Plane.h  belongingStructure.h  calculator.h  formular_inline.h  grid.h  io.h
v0.1/aircraftCal/: C_DAT.txt  P_DAT.txt  aircraftCal.cbp  main.cpp  query.txt
v0.11/aircraftCal/: C_DAT.txt  aircraftCal.cbp  aircraftcal.depend
v0.50/aircraftCal/: C_DAT.txt  aircraftCal.cbp  main.cpp  query.txt
v0.51/aircraftCal/: aircraftCal.cbp  query.txt
v0.52/aircraftCal/: C_TRANS.txt  LICENSE.txt  aircraftCal.layout  main.cpp  query.txt
v0.53/aircraftCal/: C_TRANS.txt  P_DAT.txt  (+1 more)
(+49 files in other folders)
